[tool.poetry]
name = "monkeyble"
version = "1.1.1.dev0"
description = "End-to-end testing framework for Ansible"
authors = ["Nicolas Marcq <nicolas.marcq@hpe.com>"]
license = "GNU General Public License v3 (GPLv3)"

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
ansible = "6.6.0"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mike = "^1.1.2"
build = "^0.9.0"
twine = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
