[tool.poetry]
name = "monkeyble"
version = "1.4.1" # /!\ version placed in monkeyble._version and in galaxy.yml files too
description = "End-to-end testing framework for Ansible"
authors = ["Nicolas Marcq <nicolas.marcq@hpe.com>"]
license = "GNU General Public License v3 (GPLv3)"
readme = "README.md"
homepage = "https://hewlettpackard.github.io/monkeyble/"
repository = "https://github.com/HewlettPackard/monkeyble"
keywords = ["test", "ansible", "end2end"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Utilities',
]
include = [
    'LICENSE.md'
]

[tool.poetry.dependencies]
python = "^3.11"
tabulate = "^0.9.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ansible = "11.3.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.5"
mike = "^2.1.3"
build = "^1.2.2.post1"
twine = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
monkeyble = 'monkeyble.cli.monkeyble_cli:main'
